--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -121,6 +121,12 @@
     .group .table-striped > tbody > tr:nth-of-type(odd), 
     .group > .table-striped > tbody > tr:nth-of-type(even) { @apply bg-white }
 
+    .summary > .table > tbody > tr > {@apply border-b border-black w-1/2}
+    .summary > .table > tbody > tr > td:first-child {@apply w-[25%] text-[#333] text-opacity-50}
+ 
+
+    
+
 
 
   .tooltip:hover .tooltip-text {
